# lazylinear

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: commands.md
scripts/: generate_docs.py
skill/: SKILL.md
src/lazylinear/: __init__.py  cli.py  client.py
tests/: test_cli.py  test_client.py
